--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Podcast Livramente">
         <title>Podcast Livramente</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">   
     </head>
 
 
@@ -83,10 +83,12 @@
         <main id="main2">
             <section id="descricao">
                 <p>
-                    O Livramente Podcast está baseado em Romanos 12:2.<br> Assim como o Apóstolo Paulo nos instrui a sermos transformados por uma mudança de mente, nós <br> queremos quebrar os tabus que muitas vezes criamos sobre Cristo e o Evangelho.<br> Que esse Podcast possa te ajudar a se aprofundar em Jesus.
+                    O Livramente Podcast está baseado em Romanos 12:2. Assim como o Apóstolo Paulo nos instrui a sermos transformados por uma mudança de mente, nós queremos quebrar os tabus que muitas vezes criamos sobre Cristo e o Evangelho. Que esse Podcast possa te ajudar a se aprofundar em Jesus.
                 </p>
                 <br>
-                <img class="logo-insta" src="logo-insta.png">
+                <a href="https://www.instagram.com/livramentepodcast/" target="_blank">
+                    <img class="logo-insta" src="logo-insta.png">
+                </a>
             </section>
         </main>
             <hr class="hr">
